--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 .big-background{
-    background-color: rgba(0,160,155,255);
+    background-color: #f1f5f6;
     display: flex;
     height: 205rem;
 }
@@ -158,6 +158,11 @@ html, body {
     flex-direction: column;
     order: 2;
 }
+.books-content{
+    display: flex;
+    flex-direction: row;
+    margin-top: 15rem;
+}
 .book-header{
     display: flex;
     margin-left: 23rem;
@@ -178,14 +183,15 @@ html, body {
     width: 6rem;
 }
 .delete-symbol{
-    background-image: url(arrow.png);
+    background-image: url(borrar.png);
 }
 .write-symbol{
-    background-image: url(candado.png);
+    background-image: url(lapiz.png);
     margin-left: 4rem;
-    margin-right: 149rem;
+    margin-right: 2rem;
 }
 .book-buttons{
+    width: 65%;
     font-size: 2rem;
     order: 3;
     position: relative;
@@ -210,6 +216,11 @@ html, body {
 .new-background{
     border-radius: 15rem;
     height: 12rem;
+    font-size: 3.5rem;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    line-height: 12rem;
     position: absolute;
     width: 52rem;
     z-index: 1;
@@ -217,20 +228,86 @@ html, body {
 
 .green{
     background-color: #00bc5d;
+    right: calc(52rem + 5px + 10px);
 }
 .teal{
     background-color: #00bcb7;
-    margin-left: 58rem;
+    right: 5px;
 }
 
 .book-languages{
-    background-color: powderblue;
+    background-color: #f1f5f6;
     display: flex;
     margin-left: 23rem;
 }
 
 .book-language{
+    padding-top: 5rem;
+    padding-right: 12rem;
     font-size: 3rem;
     order: 2;
 }
+/*
+.book{
+    background-image: url(candado.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 6rem;
+    margin-left: 60rem;
+    order: 2;
+    padding-top: 3rem;
+    width: 6rem;
+    z-index: 50;
+}
+ */
 
+.book {
+    border-radius: 2rem;
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
+    display: block;
+    margin-bottom: 2rem;
+    margin-right: 10rem;
+    overflow: hidden;
+    width: 226px;
+}
+
+.first-book{
+    margin-left: 21rem;
+}
+
+.book-image {
+    background-position: center;;
+    background-size: cover;
+    height: 70rem
+}
+
+.book-footer {
+    background: white;
+    padding: 16px;
+    position: relative;
+}
+
+.book-title {
+    color: #019c97;
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.book-size {
+    color: #777777;
+    font-size: 3rem;
+}
+
+.book-actions {
+    bottom: 0;
+    height: 14rem;
+    position: absolute;
+    right: 0;
+    width: 12rem;
+}
+
+.white-line{
+    border-bottom: 1px solid #d7e1e1;
+    padding-top: 5rem;
+}
